{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 19,
  "lineage": "de24e1b9-4d61-ab17-e49f-c2fb29ce4678",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_test_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e96e197b57e8fde0",
            "public_dns": "ec2-15-188-161-74.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.161.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_test_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-003f5716ac826ec86",
            "public_dns": "ec2-15-188-151-109.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.151.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-jaehoon-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0887c3076ea599bce",
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-jaehoon"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e96e197b57e8fde0",
            "id": "nat-0c0762b7ec7b4dc70",
            "network_interface_id": "eni-023763e082eb35756",
            "private_ip": "10.1.0.158",
            "public_ip": "15.188.161.74",
            "subnet_id": "subnet-0d96786f7e8e09f4c"
          },
          "dependencies": [
            "aws_eip.nat_test_1a",
            "aws_subnet.public_1a",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f5716ac826ec86",
            "id": "nat-08f16499a7f305a69",
            "network_interface_id": "eni-04ef3fed6efcf45ea",
            "private_ip": "10.1.1.189",
            "public_ip": "15.188.151.109",
            "subnet_id": "subnet-046cfb1d0b0f6ee36"
          },
          "dependencies": [
            "aws_eip.nat_test_1b",
            "aws_subnet.public_1b",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0380ed61454f09bca",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c0762b7ec7b4dc70",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-1a"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_eip.nat_test_1a",
            "aws_nat_gateway.test_1a",
            "aws_subnet.public_1a",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00c61e6e93279bc02",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08f16499a7f305a69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-1b"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_eip.nat_test_1b",
            "aws_nat_gateway.test_1b",
            "aws_subnet.public_1b",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-097df11bde865993e",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0887c3076ea599bce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_internet_gateway.test-jaehoon-gw",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ee7154b53f44eb6",
            "route_table_id": "rtb-0380ed61454f09bca",
            "subnet_id": "subnet-05425dc8336930875"
          },
          "dependencies": [
            "aws_eip.nat_test_1a",
            "aws_nat_gateway.test_1a",
            "aws_route_table.test_private_1a",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_private_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9960259c6f6d457",
            "route_table_id": "rtb-00c61e6e93279bc02",
            "subnet_id": "subnet-0e24102ccc60f9d1f"
          },
          "dependencies": [
            "aws_eip.nat_test_1b",
            "aws_nat_gateway.test_1b",
            "aws_route_table.test_private_1b",
            "aws_subnet.private_1b",
            "aws_subnet.public_1b",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0126995ef57157f60",
            "route_table_id": "rtb-097df11bde865993e",
            "subnet_id": "subnet-0d96786f7e8e09f4c"
          },
          "dependencies": [
            "aws_internet_gateway.test-jaehoon-gw",
            "aws_route_table.test_public",
            "aws_subnet.public_1a",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074c702d6c3e1a944",
            "route_table_id": "rtb-097df11bde865993e",
            "subnet_id": "subnet-046cfb1d0b0f6ee36"
          },
          "dependencies": [
            "aws_internet_gateway.test-jaehoon-gw",
            "aws_route_table.test_public",
            "aws_subnet.public_1b",
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-05425dc8336930875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-05425dc8336930875",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "private-1a"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-0e24102ccc60f9d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e24102ccc60f9d1f",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "private-1b"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-0d96786f7e8e09f4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0d96786f7e8e09f4c",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "public-1a"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-046cfb1d0b0f6ee36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-046cfb1d0b0f6ee36",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "public-1b"
            },
            "vpc_id": "vpc-01778898c87554e7d"
          },
          "dependencies": [
            "aws_vpc.test-jaehoon-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-jaehoon-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:vpc/vpc-01778898c87554e7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0362c4710481c2949",
            "default_route_table_id": "rtb-044bd3982151e2c94",
            "default_security_group_id": "sg-08469ded809369a79",
            "dhcp_options_id": "dopt-67e2d70e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01778898c87554e7d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-044bd3982151e2c94",
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-jaehoon"
            }
          }
        }
      ]
    }
  ]
}